# TinyMCP

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Readme.md
Example/MCPServer/: CMakeLists.txt
Example/MCPServer/Source/: EchoServer.cpp  EchoServer.h  EchoTask.cpp  EchoTask.h  MCPServer.cpp
Source/: CMakeLists.txt
Source/Protocol/Entity/: Server.cpp  Server.h
Source/Protocol/Message/: BasicMessage.cpp  BasicMessage.h  Message.cpp  Message.h  Notification.cpp  Notification.h  Request.cpp  Request.h  Response.cpp  Response.h
Source/Protocol/Public/: Logger.cpp  Logger.h  PublicDef.h  StringHelper.h
Source/Protocol/Session/: Session.cpp  Session.h
Source/Protocol/Task/: BasicTask.cpp  BasicTask.h  Task.h
Source/Protocol/Transport/: Channel.cpp  Channel.h  Transport.cpp  Transport.h
