cmake_minimum_required(VERSION 3.10)

if(WIN32)
    message(STATUS "Detected Windows platform")
    message(STATUS "Please use Visual Studio to build: Example/MCPServer/Build/Windows/MCPServer.sln")
elseif(APPLE)
    message(STATUS "Detected macOS platform")
    add_subdirectory(Build/MacOS)
elseif(UNIX)
    message(STATUS "Detected Linux/Unix platform")
    add_subdirectory(Build/Linux)
else()
    message(FATAL_ERROR "Unsupported platform")
endif()
